# cu-student-ai-assistant

./: .env.example  .env.local.example  .gitignore  CLAUDE.md  docker-compose.yml  pyproject.toml
.claude/skills/pull-main/: SKILL.md
.claude/skills/start-work/: SKILL.md  story-routing.md
.claude/skills/sync-docs/: SKILL.md
.claude/skills/update-docs/: SKILL.md  cross-reference-map.md  subagent-instructions.md
.github/workflows/: jira-sync.yml
data/: cu_degree_requirements.json  pyproject.toml
data/ingest/: __init__.py  build_embeddings.py  ingest_courses.py  ingest_requirements.py  parse_prerequisites.py  run_all.py  validate_counts.py  validate_requirements.py
data/ingest/tests/: test_build_embeddings.py  test_db_writes.py  test_ingest_courses.py  test_ingest_requirements.py  (+3 more)
docs/: architecture.md  claude-code-project-context.md  claude-code-setup.md  cross-reference-index.md  decisions.md  development-workflow.md  implementation-guide.md  jira-epics-and-stories.md  local-development.md
frontend/: Dockerfile  index.html  nginx.conf  package.json
scripts/: check.sh  dev.sh  seed_db.sh  test_tool_calling.py
scripts/spikes/: LANGGRAPH_SPIKE_FINDINGS.md  langgraph_ollama_spike.py
services/chat-service/: Dockerfile  pyproject.toml
services/chat-service/app/: dependencies.py  main.py
services/chat-service/tests/: conftest.py
services/course-search-api/: Dockerfile  pyproject.toml
services/course-search-api/app/: main.py
services/course-search-api/app/routes/: courses.py  programs.py  students.py
services/course-search-api/tests/: conftest.py
shared/: pyproject.toml
shared/shared/: __init__.py  auth.py  config.py  database.py  models.py  schemas.py
