[project]
name = "cu-student-ai-assistant"
version = "0.1.0"
requires-python = ">=3.12"

[tool.uv.workspace]
members = [
    "shared",
    "services/course-search-api",
    "services/chat-service",
    "data",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.13",
    "httpx>=0.27",
    "types-passlib>=1.7",
    "types-python-jose>=3.3",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["scripts/", "data/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["services/course-search-api/tests", "services/chat-service/tests"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "shared"
exclude = ["^scripts/", "^data/", "^frontend/", "^services/"]
