[project]
name = "chat-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "shared",
    "langchain>=0.3",
    "langgraph>=0.2",
    "langchain-ollama>=0.2",
    "neo4j>=5.25",
    "redis>=5.2",
    "httpx>=0.27",
]

[tool.uv.sources]
shared = { workspace = true }
